--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>js-train-ticket-form</title>
 </head>
 <body>
-    
+    <!--dati utente-->
+    <div>
+        <span>Inserisci la quantità di km che vuoi percorrere: </span>
+        <input type="text" id="user-km">
+        <span>Inserisci la tua età: </span>
+        <input type="text" id="user-age">
+        <button id="confirm">Confirm</button>
+    </div>
+
+    <!--biglietto-->
+    <div>
+        <span>Il prezzo del tuo biglietto è: </span>
+        <span id="prezzo-totale"></span>
+        <span>&euro;</span>
+    </div>
+
+
+
+
+
     <script type="text/javascript" src="js/script.js"> </script>
 </body>
 </html>
