--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-train-ticket-form</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!--dati utente-->
-    <div>
-        <span>Inserisci la quantità di km che vuoi percorrere: </span>
-        <input type="text" id="user-km">
-        <span>Inserisci la tua età: </span>
-        <input type="text" id="user-age">
-        <button id="confirm">Confirm</button>
-    </div>
 
-    <!--biglietto-->
-    <div>
-        <span>Il prezzo del tuo biglietto è: </span>
-        <span id="prezzo-totale"></span>
-        <span>&euro;</span>
+
+<body>
+    <div class="my-container">
+        
+        <!--dati utente-->
+        <div class="dati-utente">
+            <div class="dati-utente-top">
+                <div class="dati-utente-format">
+                    <span>Inserisci la quantità di km che vuoi percorrere: </span>
+                    <input type="text" id="user-km">
+                </div>
+
+                <div class="dati-utente-format">
+                    <span>Inserisci la tua età: </span>
+                    <input type="text" id="user-age">
+                </div>
+            </div>
+
+            <button id="confirm">Confirm</button>
+        </div>
+
+        <!--biglietto-->
+        <div id="user-result">
+            <span>Il prezzo del tuo biglietto è: </span>
+            <span id="prezzo-totale"></span>
+            <span>&euro;</span>
+        </div>
     </div>
 
 
